<resources>
    <string name="app_name">Health Kiosk</string>
    <string name="main_screen_patient_name">Patient Name</string>
    <string name="main_screen_age">Age</string>
    <string name="main_screen_date_of_birth">Date of Birth</string>
    <string name="main_screen_gender">Gender</string>
    <string name="main_screen_phone">Phone</string>
    <string name="main_screen_device_status_connected">DEVICE CONNECTED</string>
    <string name="main_screen_device_status_disconnected">DEVICE DISCONNECT</string>
    <string name="main_screen_my_profile">MY PROFILE</string>
    <string name="main_screen_edit_my_profile">EDIT MY PROFILE</string>
    <string name="main_screen_logout">LOGOUT</string>
    <string name="cd_fischer_logo">Fischer Logo</string>
    <string name="cd_digihealth_atm_logo">DigiHealth ATM Logo</string>
    <string name="cd_button_back">Back Button</string>
    <string name="cd_mobile_icon">Mobile Icon</string>
    <string name="cd_health_card_icon">Health Card Icon</string>
    <string name="cd_unique_code_icon">Unique Code Icon</string>
    <string name="fragment_title_landing">Landing Fragment</string>
    <string name="fragment_title_login_landing">Login Landing Fragment</string>
    <string name="fragment_title_login">Login Fragment</string>
    <string name="fragment_title_register">Register Fragment</string>
    <string name="fragment_title_pin">Pin Fragment</string>
    <string name="fragment_title_home_landing">Home Landing Fragment</string>
    <string name="fragment_title_medical_package">Medical Package Fragment</string>
    <string name="fragment_title_customize_test">Customize Test Fragment</string>
    <string name="fragment_title_test">Test Fragment</string>
    <string name="fragment_title_test_report">Test Report Fragment</string>
    <string name="fragment_title_edit_profile">Edit Profile Fragment</string>
    <string name="fragment_title_telemedicine_landing">Telemedicine Landing Fragment</string>
    <string name="fragment_title_my_appointmet">My Appointment Fragment</string>
    <string name="fragment_title_book_appointmet">Book Appointment Fragment</string>
    <string name="fragment_title_make_appointmet">Make Appointment Fragment</string>
    <string name="fragment_title_notification">Notification Fragment</string>
    <string name="fragment_title_consult_now">Consult Now Fragment</string>
    <string name="fragment_title_consultation_history">Consultation History Fragment</string>
    <string name="fragment_title_post_consultation">Post Consultation Fragment</string>
    <string name="fragment_title_video_call">Video Call Fragment</string>
    <string name="fragment_title_reschedule_appointment">Reschedule Fragment</string>
    <string name="fragment_title_chat">Chat Fragment</string>
    <string name="fragment_title_test_report_history">Test Report History Fragment</string>
    <string name="fragment_landing_login_patient_account">Login Patient Account</string>
    <string name="fragment_landing_no_account_question">No account?</string>
    <string name="fragment_landing_register">Register</string>
    <string name="fragment_landing_submit">Submit</string>
    <string name="fragment_login_landing_select_login_option">Select Login Option</string>
    <string name="fragment_login_landing_mobile_number">Mobile Number</string>
    <string name="fragment_login_landing_health_card">Health Card</string>
    <string name="fragment_login_landing_unique_code">Unique Code</string>
    <string name="fragment_login_login_with">Login With</string>
    <string name="fragment_login_mobile_number_hint_placeholder">xxxxxxxxxx</string>
    <string name="fragment_login_mobile_number_country_code">+62</string>
    <string name="fragment_login_input_your_health_card_number">Input your health card number</string>
    <string name="fragment_pin_create">Create</string>
    <string name="fragment_pin_input">Input</string>
    <string name="fragment_pin_pin_verification">Pin Verification</string>
    <string name="fragment_pin_verify">Verify</string>
    <string name="fragment_register_create_patient_account">Create Patient Account</string>
    <string name="fragment_register_required">*Required</string>
    <string name="fragment_register_name">Name*</string>
    <string name="fragment_register_gender">Gender*</string>
    <string name="fragment_register_date_of_birth">Date of birth*</string>
    <string name="fragment_register_phone_number">Phone Number*</string>
    <string name="fragment_register_email">Email*</string>
    <string name="fragment_register_blood_group">Blood Group</string>
    <string name="fragment_register_aadhar_card_number">Aadhar Card Number</string>
    <string name="fragment_register_unique_id">Unique ID</string>
    <string name="fragment_register_name_without_aposthrope">Name</string>
    <string name="fragment_register_email_without_aposthrope">Email</string>
    <string name="fragment_register_card_number">Card Number</string>
    <string name="fragment_register_id_number">ID Number</string>
    <string name="fragment_register_select_gender">Select Gender</string>
    <string name="fragment_register_select_blood_group">Select Blood Group</string>
    <string name="fragment_register_date_format">mm/dd/yy</string>
    <string name="fragment_home_welcome_name">Welcome, %1$s.</string>
    <string name="fragment_home_what_do_you_need_today">What do you need today?</string>
    <string name="fragment_home_landing_general_checkup">General Checkup</string>
    <string name="fragment_home_landing_advanced_test">Advanced Test</string>
    <string name="fragment_home_landing_report">Report</string>
    <string name="fragment_medical_package_select_medical_package">Select Medical Package</string>
    <string name="fragment_medical_package_customize_test">Customize Test</string>
    <string name="fragment_medical_package_select_test_based_on_your_needs">Select test based on your needs</string>
    <string name="fragment_medical_package_start_test">Start Test</string>
    <string name="fragment_customize_test_custom_test">Customize Your Test</string>
    <string name="fragment_customize_test_test_on">Test on %1$s</string>
    <string name="fragment_medical_package_available_package">Available Package</string>
    <string name="fragment_customize_test_general_checkup">General Checkup</string>
    <string name="fragment_test_custom_test">Custom Test</string>
    <string name="fragment_test_package_test">%1$s Test</string>
    <string name="fragment_test_complete">Complete</string>
    <string name="fragment_weight_kg">KG</string>
    <string name="fragment_weight_lbs">LBS</string>
    <string name="fragment_test_start">Start</string>
    <string name="fragment_weight_test_weight">Weight</string>
    <string name="fragment_test_stop">Stop</string>
    <string name="fragment_test_retake">Retake</string>
    <string name="fragment_test_steps_to_follow">Steps to follow</string>
    <string name="fragment_temperature_test_fahrenheit">°F</string>
    <string name="fragment_temperature_test_celcius">°C</string>
    <string name="fragment_temperature_test_temperature">Temperature</string>
    <string name="fragment_test_height">Height</string>
    <string name="fragment_height_test_cm">Cm</string>
    <string name="fragment_oximeter_test_spo2">SPO2</string>
    <string name="fragment_test_percentage">%</string>
    <string name="fragment_test_oxygen">Oxygen</string>
    <string name="fragment_test_pulse">Pulse</string>
    <string name="fragment_oximeter_test_prbpm">PRbpm</string>
    <string name="fragment_oximeter_test_bpm">bpm</string>
    <string name="fragment_blood_pressure_test_pulse_min">pulse/min</string>
    <string name="fragment_blood_pressure_systolic">Systolic</string>
    <string name="fragment_blood_pressure_test_mmhg">mmHg</string>
    <string name="fragment_blood_pressure_test_diastolic">Diastolic</string>
    <string name="fragment_stethoscope_test_recording_time">Recording Time</string>
    <string name="fragment_test_report_report">%1$s Report</string>
    <string name="fragment_test_report_test_result">Test Result</string>
    <string name="fragment_test_report_health_analysis">Health Analysis</string>
    <string name="fragment_test_report_export_to_pdf">Export To PDF</string>
    <string name="fragment_telemedicine_landing_appointment">Appointment</string>
    <string name="fragment_telemedicine_landing_consult_now">Consult Now</string>
    <string name="fragment_telemedicine_landing_my_appointment">My Appointment</string>
    <string name="fragment_telemedicine_landing_consultation_history">Consultation History</string>
    <string name="fragment_telemedicine_live">Live</string>
    <string name="fragment_my_appointment_date_time"><![CDATA[Date & Time]]></string>
    <string name="fragment_my_appointment_reschedule">Reschedule</string>
    <string name="fragment_my_appointment_cancel">Cancel</string>
    <string name="fragment_my_appointment_book_an_appointment">Book an Appointment</string>
    <string name="fragment_book_appointment_book_appointment">Book Appointment</string>
    <string name="fragment_make_appointment_make_appointment">Make Appointment</string>
    <string name="fragment_reschedule_appointment">Reschedule</string>
    <string name="fragment_make_appointment_your_health_complaints">Your Health Complaints</string>
    <string name="fragment_make_appointment_tell_your_complaints">Tell Your Complaints</string>
    <string name="fragment_make_appointment_speech_to_text">Speech to text</string>
    <string name="fragment_make_appointment_start_speak">Start speak...</string>
    <string name="fragment_make_appointment_select_date">Select Date</string>
    <string name="fragment_make_appointment_select_time">Select Time</string>
    <string name="fragment_make_appointment_clear">Clear</string>
    <string name="fragment_make_appointment_edit">Edit</string>
    <string name="fragment_make_appointment_your_appointment_has_been_made">Your notification has been made!</string>
    <string name="fragment_make_appointment_okay">Okay</string>
    <string name="fragment_my_appointment_are_you_sure_want_to_cancel_appointment">Are you sure want to cancel appointment?</string>
    <string name="fragment_my_appointment_yes">Yes</string>
    <string name="fragment_my_appointment_no">No</string>
    <string name="fragment_edit_profile_edit_patient_account">Edit Patient Account</string>
    <string name="fragment_edit_profile_required">*Required</string>
    <string name="fragment_edit_profile_name">Name*</string>
    <string name="fragment_edit_profile_name_without_aposthrope">Name</string>
    <string name="fragment_edit_profile_gender">Gender*</string>
    <string name="fragment_edit_profile_select_gender">Select Gender</string>
    <string name="fragment_edit_profile_phone_number">Phone Number*</string>
    <string name="fragment_edit_profile_mobile_number_hint_placeholder">xxxxxxxxxx</string>
    <string name="fragment_edit_profile_email">Email*</string>
    <string name="fragment_edit_profile_blood_group">Blood Group</string>
    <string name="fragment_edit_profile_select_blood_group">Select Blood Group</string>
    <string name="fragment_edit_profile_date_of_birth">Date of birth*</string>
    <string name="fragment_edit_profile_save">Save</string>
    <string name="fragment_notification_notification">Notification</string>
    <string name="fragment_notification_today">Today</string>
    <string name="fragment_notification_all_notifications">All Notifications</string>
    <string name="fragment_notification_join_now">Join Now</string>
    <string name="fragment_video_call_you">You</string>
    <string name="fragment_consult_now_consult_now">Consult Now</string>
    <string name="fragment_consultation_history_consultation_history">Consultation History</string>
    <string name="fragment_consultation_history_book_again">Book Again</string>
</resources>