<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/asset_content_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.landing.LandingFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:contentDescription="@string/cd_digihealth_atm_logo"
        android:src="@drawable/asset_logo_digihealth_atm" />

    <LinearLayout
        android:id="@+id/btn_login_patient"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_rounded_white_border"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_landing_login_patient_account"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_register_patient"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_rounded_white_border"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_landing_no_account_question"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/fragment_landing_register"
            android:textAllCaps="true"
            android:textColor="@color/textGreen"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>