<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/asset_content_background"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".ui.auth.landing.LandingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_home_landing_general_checkup"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryGreen"
            android:contentDescription="@string/cd_button_back"
            android:src="@drawable/icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="50dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_child_card"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_unique_code_icon"
                android:src="@drawable/asset_icon_customize" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_medical_package_customize_test"
                    android:textAllCaps="true"
                    android:textColor="@color/primaryBlue"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_medical_package_select_test_based_on_your_needs"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start_test"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:text="@string/fragment_medical_package_start_test"
                android:textAllCaps="true"
                android:textColor="@color/onWhiteSurface"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/fragment_medical_package_available_package"
            android:textColor="@color/primaryGreen" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_medical_packages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/item_package_grid"
            android:layout_weight="1"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</LinearLayout>