<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/asset_content_background"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".ui.auth.landing.LandingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_login_login_with"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_title_login_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/primaryGreen"
                android:textSize="32sp"
                android:textStyle="bold"
                tools:text="@string/fragment_login_landing_mobile_number" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryGreen"
            android:contentDescription="@string/cd_button_back"
            android:src="@drawable/icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="50dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_login_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_login_landing_mobile_number"
            android:textColor="@color/primaryGreen" />


        <LinearLayout
            android:id="@+id/layout_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_rounded_white_border"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:text="@string/fragment_login_mobile_number_country_code"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/ed_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/fragment_login_mobile_number_hint_placeholder"
                android:inputType="phone"
                android:maxLength="13"
                android:textColor="@color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_health_unique"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_rounded_white_border"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <EditText
                android:id="@+id/ed_health_unique"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:layout_marginHorizontal="12dp"
                android:hint="@string/fragment_login_input_your_health_card_number"
                android:inputType="phone"
                android:maxLength="13"
                android:textColor="@color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/fragment_landing_submit"
            android:textAllCaps="true"
            android:textColor="@color/onWhiteSurface"
            android:textSize="18sp"
            app:cornerRadius="8dp" />
    </LinearLayout>

</LinearLayout>