<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/asset_content_background"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".ui.auth.landing.LandingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title_pin_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/fragment_pin_create"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textColor="@color/primaryGreen"
                android:textSize="32sp"
                android:textStyle="bold"
                android:text="@string/fragment_pin_pin_verification" />

        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryGreen"
            android:contentDescription="@string/cd_button_back"
            android:src="@drawable/icon_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="50dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="vertical">

        <com.fmv.healthkiosk.ui.auth.pin.widget.CustomPinView
            android:id="@+id/pin_verification_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/fragment_pin_verify"
            android:textAllCaps="true"
            android:textColor="@color/onWhiteSurface"
            android:textSize="18sp"
            app:cornerRadius="8dp" />
    </LinearLayout>

</LinearLayout>